--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -13,7 +13,7 @@
 
         <!-- You can turn off the avatar in _config.yml by setting to false -->
         {% if site.resume_avatar == 'true' %}
-        <img src="images/femalecodertocat.png" alt="my photo" class="avatar no-print" itemprop="image">
+        <img src="images/5b10f3b7857f7c79d22a7158-0-tiny.jpg" alt="my photo" class="avatar no-print" itemprop="image">
         {% endif %}
 
         <!-- Your name is defined in the _config.yml file -->
